--- a/wezterm/colors/Seoul256.toml
+++ b/wezterm/colors/Seoul256.toml
@@ -1,27 +1,27 @@
 [colors]
 ansi = [
- '#4e4e4e'
- '#d68787'
- '#5f865f'
- '#d8af5f'
- '#85add4'
- '#d7afaf'
- '#87afaf'
- '#d0d0d0'
+ '#4e4e4e',
+ '#d68787',
+ '#5f865f',
+ '#d8af5f',
+ '#85add4',
+ '#d7afaf',
+ '#87afaf',
+ '#d0d0d0',
 ]
 brights = [
- '#626262'
- '#d75f87'
- '#87af87'
- '#ffd787'
- '#add4fb'
- '#ffafaf'
- '#87d7d7'
- '#e4e4e4'
+ '#626262',
+ '#d75f87',
+ '#87af87',
+ '#ffd787',
+ '#add4fb',
+ '#ffafaf',
+ '#87d7d7',
+ '#e4e4e4',
 ]
-background = '#3a3a3a'
-foreground = '#d0d0d0'
-cursor_bg = '#d0d0d0'
+background = '#3a3a3a',
+foreground = '#d0d0d0',
+cursor_fg = '#d0d0d0',
 
 [metadata]
-name = 'Seoul256'
+name = 'Seoul256',
